src/css/components/tab.css
@layer components {
  .tab-group {
    :where([elv]) &,
    &:where([elv]) {
      @apply elv-flex elv-flex-col;
    }
  }

  .tab-list {
    :where([elv]) &,
    &:where([elv]) {
      @apply elv-flex elv-items-center;
    }
  }

  .tab-list--full-width {
    :where([elv]) &,
    &:where([elv]) {
      @apply elv-border-b elv-border-medium;
    }
  }

  .tab-list--full-width .tab {
    :where([elv]) &,
    &:where([elv]) {
      @apply elv-flex-1;
      border-bottom: 1px solid transparent;
    }
  }

  .tab {
    :where([elv]) &,
    &:where([elv]) {
      @apply elv-flex elv-items-center elv-justify-center elv-gap-1
        elv-h-10 elv-px-6 elv-border-0 elv-bg-transparent elv-cursor-pointer
        elv-font-figtree elv-text-sm elv-leading-sm elv-font-semibold
        elv-text-subtle elv-transition-all elv-duration-150 elv-relative elv-whitespace-nowrap;
      padding-bottom: 1px;
    }
  }

  .tab:hover {
    :where([elv]) &,
    &:where([elv]) {
      @apply elv-text-primary;
      padding-bottom: 0;
      border-bottom: 2px solid currentColor;
    }
  }

  .tab[aria-selected="true"] {
    :where([elv]) &,
    &:where([elv]) {
      @apply elv-text-primary;
      padding-bottom: 0;
      border-bottom: 2px solid currentColor;
    }
  }

  .tab:focus-visible {
    :where([elv]) &,
    &:where([elv]) {
      @apply elv-outline elv-outline-3 elv-outline-purple-40;
      outline-offset: -2px;
      z-index: 1;
    }
  }

  .tab-icon {
    :where([elv]) &,
    &:where([elv]) {
      @apply elv-w-4 elv-h-4 elv-shrink-0;
    }
  }

  .tab-panels {
    :where([elv]) &,
    &:where([elv]) {
      @apply elv-mt-4;
    }
  }
}

